--- a/src/app/pages/profile/profile-tournament/profile-tournament.component.scss
+++ b/src/app/pages/profile/profile-tournament/profile-tournament.component.scss
@@ -1,7 +1,7 @@
 @import "src/global_variables.scss";
 
 .content {
-  padding: 2em 2em 2em 2em;
+  padding: 2em;
 }
 
 .add-tournament {
